--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^2.0.0-beta.6",
     "core-js": "^3.6.4",
     "vant": "^2.5.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vuescroll": "^4.15.0-beta.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
