--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.19.2",
     "better-scroll": "^2.0.0-beta.6",
     "core-js": "^3.6.4",
+    "fastclick": "^1.0.6",
     "vant": "^2.5.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
     "vuescroll": "^4.15.0-beta.1",
     "vuex": "^3.1.2"
